syntax = "proto3";

package godesk;
option go_package = "./;godesk";

message EmptyRequest {}

message EmptyResponse {}

message BaseRequest {
  // 当前页
  uint32 page = 1;
  // 每页数量
  uint32 size = 2;
  // 关键字
  string keyword = 3;
}
