syntax = "proto3";

package godesk;
option go_package = "./;godesk";
import "base.proto";

message UserInfoResponse {
  // 用户唯一标识
  string uuid = 1;
  // 用户名
  string username = 2;
  // Token
  string token = 3;
}

message UserRegisterRequest {
  // 用户名
  string username = 1;
  // 密码
  string password = 2;
}

message UserLoginRequest {
  // 用户名
  string username = 1;
  // 密码
  string password = 2;
}

service UserService {
  // 获取用户信息
  rpc GetUserInfo(EmptyRequest) returns (UserInfoResponse) {}
  // 用户注册
  rpc UserRegister(UserRegisterRequest) returns (UserInfoResponse) {}
  // 用户登录
  rpc UserLogin(UserLoginRequest) returns (UserInfoResponse) {}
}
